--- a/references.bib
+++ b/references.bib
@@ -73,4 +73,25 @@
   annote = "R package version 7.1"
 }
 
+@techreport{sachs2018world,
+  title={World happiness report 2018},
+  author={Sachs, Jeffrey D and Layard, Richard and Helliwell, John F and others},
+  year={2018}
+}
 
+  @Manual{maps,
+    title = {maps: Draw Geographical Maps},
+    author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
+    year = {2018},
+    note = {R package version 3.3.0},
+    url = {https://CRAN.R-project.org/package=maps},
+  }
+  
+  @Manual{wbstats,
+    title = {wbstats: Programmatic Access to the World Bank API},
+    author = {Jesse Piburn},
+    organization = {Oak Ridge National Laboratory},
+    address = {Oak Ridge, Tennessee},
+    year = {2018},
+    url = {https://www.ornl.gov/division/csed/gist},
+  }
