--- a/references.bib
+++ b/references.bib
@@ -14,7 +14,7 @@
 
 @article{gromping2015variable,
   title={Variable importance in regression models},
-  author={Gr{\"o}mping, Ulrike},
+  author={Grömping, Ulrike},
   journal={Wiley Interdisciplinary Reviews: Computational Statistics},
   volume={7},
   number={2},
@@ -53,16 +53,6 @@
     pages = {1--27},
   }
   
-  
-@article{cleveland1990stl,
-  title={{STL}: A seasonal-trend decomposition procedure based on loess},
-  author={Cleveland, Robert B and Cleveland, William S and McRae, Jean E and Terpenning, Irma},
-  journal={Journal of Official Statistics},
-  volume={6},
-  number={1},
-  pages={3--73},
-  year={1990},
-}
 
 @book{fox2019regression,
   title={Regression diagnostics: An introduction},
@@ -78,3 +68,112 @@
   year={1986},
   publisher={National Bureau of Economic Research Cambridge, Mass., USA}
 }
+
+@Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org}
+  }
+  
+@Manual{tidyverse,
+    title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+    author = {Hadley Wickham},
+    year = {2017},
+    note = {R package version 1.2.1},
+    url = {https://CRAN.R-project.org/package=tidyverse}
+  }
+  
+@Manual{dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain Fran?ois and Lionel Henry and Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.0},
+    url = {https://CRAN.R-project.org/package=dplyr}
+  }
+
+
+@Manual{GGally,
+  title = {GGally: Extension to 'ggplot2'},
+  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
+  year = {2020},
+  note = {R package version 2.0.0},
+  url = {https://CRAN.R-project.org/package=GGally}
+}
+
+
+@Article{sf,
+    author = {Edzer Pebesma},
+    title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+    year = {2018},
+    journal = {{The R Journal}},
+    doi = {10.32614/RJ-2018-009},
+    url = {https://doi.org/10.32614/RJ-2018-009},
+    pages = {439--446},
+    volume = {10},
+    number = {1}
+  }
+
+
+@Manual{rgeos,
+    title = {rgeos: Interface to Geometry Engine - Open Source ('GEOS')},
+    author = {Roger Bivand and Colin Rundel},
+    year = {2018},
+    note = {R package version 0.4-2},
+    url = {https://CRAN.R-project.org/package=rgeos}
+  }
+
+@Manual{lwgeom,
+    title = {lwgeom: Bindings to Selected 'liblwgeom' Functions for Simple Features},
+    author = {Edzer Pebesma},
+    year = {2020},
+    note = {R package version 0.2-1},
+    url = {https://CRAN.R-project.org/package=lwgeom}
+  }
+
+@Book{car,
+    title = {An {R} Companion to Applied Regression},
+    edition = {Second},
+    author = {John Fox and Sanford Weisberg},
+    year = {2011},
+    publisher = {Sage},
+    address = {Thousand Oaks {CA}},
+    url = {http://socserv.socsci.mcmaster.ca/jfox/Books/Companion}
+  }
+
+@Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2017},
+    note = {R package version 0.1},
+    url = {https://CRAN.R-project.org/package=here}
+  }
+
+@Article{lubridate,
+    title = {Dates and Times Made Easy with {lubridate}},
+    author = {Garrett Grolemund and Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {3},
+    pages = {1--25},
+    url = {http://www.jstatsoft.org/v40/i03/}
+  } 
+
+@Manual{cowplot,
+    title = {cowplot: Streamlined Plot Theme and Plot Annotations for 'ggplot2'},
+    author = {Claus O. Wilke},
+    year = {2019},
+    note = {R package version 1.0.0},
+    url = {https://CRAN.R-project.org/package=cowplot}
+  }
+
+@Manual{kableExtra,
+    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+    author = {Hao Zhu},
+    year = {2019},
+    note = {R package version 1.1.0},
+    url = {https://CRAN.R-project.org/package=kableExtra}
+  }
